--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "tw-init": "node node_modules/tailwindcss/lib/cli.js init -p"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.8.2",
+    "axios": "^1.11.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.7.1"
   },
   "devDependencies": {
